--- a/homework1/project/style.css
+++ b/homework1/project/style.css
@@ -21,23 +21,21 @@ body{
 button{
     background-color: var(--button-bg-color);
     box-shadow: 0 0 10px var(--shadow-color);
-    border: 1px solid var(--button-bg-color);
+    border: 2px solid var(--button-bg-color);
     padding: 2px;
     border-radius: 3px;
     color: rgb(28, 77, 77);
 }
 button:hover{
     background-color: var(--button-hover-bg-color);
-  }
-  button:active{
-    background-color: var(--button-active-bg-color);
-    box-shadow: 0 0 6px var(--shadow-button-active-color);
-  }
-
-  button:focus-visible {
-	border: 1px solid #4c51f9;
-	outline: none;
+    border: 2px solid var(--button-hover-bg-color);
 }
+button:active{
+    background-color: var(--button-active-bg-color);
+    border: 2px solid rgba(9, 137, 160, 0.3);
+    box-shadow: 0 0 6px var(--shadow-button-active-color);
+}
+
 .container {
     width: 1140px;
     margin: 0 auto;
@@ -45,7 +43,7 @@ button:hover{
 .header{
     background-color: var(--header-bg-color);
     box-shadow: 0 0 10px var(--shadow-color);
-    height: 36px;
+    height: 40px;
     position: relative;
 }
 .btn-cart {
